noinst_LIBRARIES = libGui.a

INCLUDES = -I$(top_srcdir)

libGui_a_SOURCES = Window.cpp Window.h \
                   RootWindow.cpp RootWindow.h \
                   Frame.cpp Frame.h \
                   Widget.cpp Widget.h \
                   Label.cpp Label.h \
                   Container.cpp Container.h \
                   Workspace.cpp Workspace.h \
                   Toplevel.cpp Toplevel.h \
                   Button.cpp Button.h \
                   Box.cpp Box.h \
                   Graphic.cpp Graphic.h \
                   Compass.cpp Compass.h \
                   event.h
