noinst_LIBRARIES = libGui.a

INCLUDES = -I$(top_srcdir)

libGui_a_SOURCES = Window.cpp Window.h \
                   RootWindow.cpp RootWindow.h \
                   Frame.cpp Frame.h \
                   Text.cpp Text.h \
                   Caret.cpp Caret.h \
                   Widget.cpp Widget.h \
                   Label.cpp Label.h \
                   Container.cpp Container.h \
                   Workspace.cpp Workspace.h \
                   Toplevel.cpp Toplevel.h \
                   Dialogue.cpp Dialogue.h \
                   Panel.cpp Panel.h \
                   ConnectDialogue.cpp ConnectDialogue.h \
                   Button.cpp Button.h \
                   ToggleButton.cpp ToggleButton.h \
                   Box.cpp Box.h \
                   TextEntry.cpp TextEntry.h \
                   Graphic.cpp Graphic.h \
                   Compass.cpp Compass.h \
                   focus.cpp focus.h \
                   event.h
