noinst_LIBRARIES = libGuichan.a

INCLUDES = -I$(top_srcdir)

libGuichan_a_SOURCES = box.cpp box.hpp \
                       bar.cpp bar.hpp \
                       RootWidget.cpp RootWidget.h \
                       Alert.cpp Alert.h \
                       ConnectWindow.cpp ConnectWindow.h \
                       OptionsWindow.cpp OptionsWindow.h \
                       Inventory.cpp Inventory.h \
                       Panel.cpp Panel.h \
                       passwordfield.cpp passwordfield.h \
                       StatusWindow.cpp StatusWindow.h \
                       LoginWindow.cpp LoginWindow.h \
                       CharacterWindow.cpp CharacterWindow.h \
                       ConsoleWindow.cpp ConsoleWindow.h \
                       Workarea.cpp Workarea.h \
                       ActionListenerCommand.h ActionListenerSigC.h \
                       SpeechBubble.cpp SpeechBubble.h

