noinst_LIBRARIES = libGuichan.a

INCLUDES = -I$(top_srcdir)

libGuichan_a_SOURCES = \
                       actiontextfield.cpp actiontextfield.h \
                       bar.cpp bar.hpp \
                       box.cpp box.hpp \
	               imagefontxpm.cpp imagefontxpm.h rpgfont.h \
                       passwordfield.cpp passwordfield.h \
                       ActionListenerCommand.h ActionListenerSigC.h \
                       Alert.cpp Alert.h \
                       AudioOptions.cpp AudioOptions.h \
                       CharacterWindow.cpp CharacterWindow.h \
                       CommandLine.h \
                       Compass.cpp Compass.h \
                       ConnectWindow.cpp ConnectWindow.h \
                       ConsoleWindow.cpp ConsoleWindow.h \
                       ControlsOptions.cpp ControlsOptions.h \
                       DblClkListBox.h \
                       HelpOptions.cpp HelpOptions.h \
                       Inventory.cpp Inventory.h \
                       LoginWindow.cpp LoginWindow.h \
                       OptionsTemplate.cpp OptionsTemplate.h \
                       OptionsWindow.cpp OptionsWindow.h \
                       Overlay.cpp Overlay.h \
                       Panel.cpp Panel.h \
                       RenameDialog.cpp RenameDialog.h \
                       RootWidget.cpp RootWidget.h \
                       SpeechBubble.cpp SpeechBubble.h \
                       StatusWindow.cpp StatusWindow.h \
                       TaskWindow.cpp TaskWindow.h \
                       VideoOptions.cpp VideoOptions.h \
                       Workarea.cpp Workarea.h \
		       WFUTWindow.cpp WFUTWindow.h

