SUBDIRS = cal3d
noinst_LIBRARIES = libModelLoader.a 

INCLUDES = -I$(top_srcdir)

libModelLoader_a_SOURCES = \
	ModelSystem.cpp ModelSystem.h \
	ModelHandler.cpp ModelHandler.h \
	ObjectHandler.cpp ObjectHandler.h \
	WireFrame.cpp WireFrame_Loader.cpp \
	WireFrame.h WireFrame_Loader.h \
	BoundBox.cpp BoundBox_Loader.cpp \
	BoundBox.h BoundBox_Loader.h \
	NPlane.cpp NPlane_Loader.cpp \
	NPlane.h NPlane_Loader.h \
	3ds.cpp 3ds_Loader.cpp \
	3ds.h 3ds_Loader.h \
	LibModelFile.cpp LibModelFile.h \
	LibModelFile_Loader.cpp LibModelFile_Loader.h \
	ModelRecord.cpp ModelRecord.h \
	ModelLoader.h ModelLoader.cpp \
	Model.h \
	ObjectRecord.h ObjectRecord.cpp \
	AreaModel.cpp AreaModel.h \
	AreaModelLoader.cpp AreaModelLoader.h \
	NullModel.h
	
	
