SUBDIRS = cal3d
noinst_LIBRARIES = libModelLoader.a 

INCLUDES = -I$(top_srcdir)

libModelLoader_a_SOURCES = \
	3ds.cpp 3ds_Loader.cpp \
	3ds.h 3ds_Loader.h \
	AreaModel.cpp AreaModel.h \
	AreaModelLoader.cpp AreaModelLoader.h \
	BoundBox.cpp BoundBox_Loader.cpp \
	BoundBox.h BoundBox_Loader.h \
	DynamicObject.cpp DynamicObject.h \
	EntityMapper.cpp EntityMapper.h \
	EntityMapperRule_Random.cpp EntityMapperRule_Random.h \
	IEntityMapperRule.h \
	LibModelFile.cpp LibModelFile.h \
	LibModelFile_Loader.cpp LibModelFile_Loader.h \
	Model.h \
	ModelLoader.h ModelLoader.cpp \
	ModelRecord.cpp ModelRecord.h \
	ModelSystem.cpp ModelSystem.h \
	ModelHandler.cpp ModelHandler.h \
	NPlane.cpp NPlane_Loader.cpp \
	NPlane.h NPlane_Loader.h \
	NullModel.h \
	ObjectHandler.cpp ObjectHandler.h \
	ObjectRecord.h ObjectRecord.cpp \
	ParticleSystem.cpp ParticleSystem.h \
	ParticleSystemLoader.cpp ParticleSystemLoader.h \
	SearObject.cpp SearObject.h SearObjectTypes.h \
	SearObject_Loader.cpp SearObject_Loader.h \
	StaticObject.cpp StaticObject.h \
	StaticObjectFunctions.cpp StaticObjectFunctions.h \
	WireFrame.cpp WireFrame_Loader.cpp \
	WireFrame.h WireFrame_Loader.h

