noinst_LIBRARIES = libRendererGL.a 

INCLUDES = -I$(top_srcdir)

libRendererGL_a_SOURCES = \
	TextureManager.cpp TextureManager.h \
	StateManager.cpp StateManager.h \
	default_font.h default_font.xpm default_image.xpm \
	RenderSystem.cpp RenderSystem.h \
	GL.cpp GL.h \
	Sprite.cpp Sprite.h \
	ImageUtils.h ImageUtils.cpp
