noinst_LIBRARIES = libRendererGL.a 

INCLUDES = -I$(top_srcdir)

libRendererGL_a_SOURCES = \
	Camera.cpp Camera.h \
	CameraSystem.cpp CameraSystem.h \
	Graphics.cpp Graphics.h \
	Render.h \
	Frustum.cpp Frustum.h \
	Light.h \
	LightManager.cpp LightManager.h \
	TextureManager.cpp TextureManager.h \
	StateManager.cpp StateManager.h \
	default_font.h default_font.xpm default_image.xpm \
	RenderSystem.cpp RenderSystem.h \
	GL.cpp GL.h \
	Sprite.cpp Sprite.h \
	ImageUtils.h ImageUtils.cpp \
	StaticObject.cpp StaticObject.h
